--- a/styles/style.css
+++ b/styles/style.css
@@ -13,5 +13,25 @@ body {
   align-items: center;
 }
 canvas {
+  background-color: white;
+
   border: 30px solid #004d70;
+}
+button {
+  border: none;
+  color: rgb(0, 0, 0);
+  padding: 5px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  font-size: 50px;
+  margin: 4px 2px;
+  transition-duration: 0.2s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #4caf50;
+  color: white;
 }
